# PMI_project

./: .gitignore
Analysis/matlab/: EQM.m  acceleration_calculation.m  data_save.m  main.m  mass_force_calculation.m  mat2rpy.m  mat_data.csv  plotting.m  position_calculation.m  read_data.m  velocity_calculation.m
Analysis/recurdyn/: WOR.rmd  body1_ex.xml  body2_ex.xml  body3_ex.xml  body4_ex.xml  end.xml  rec_data_free_fall.csv
Analysis/recurdyn/WOR_01/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rmd  WOR.rplt  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_02/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_03/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_04/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_05/: WOR.msg  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_06/: WOR.msg  WOR.rad  WOR.ran  WOR.rpmx
Analysis/recurdyn/WOR_07/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_08/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_09/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_10/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_11/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rmd  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_12/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_13/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_14/: WOR.msg  WOR.rad  WOR.ran  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_15/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_16/: WOR.msg  WOR.rad  WOR.ran  WOR.rpmx  WOR_REPORTSTEP.icf
Analysis/recurdyn/WOR_17/: WOR.msg  WOR.rad  WOR.req  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_18/: WOR.msg  WOR.rad  WOR.req  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_19/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_20/: WOR.msg  WOR.rad  WOR.ran  WOR.rdp  WOR.req  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_21/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_22/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rmd  WOR.rpi  WOR.rpmx
Analysis/recurdyn/WOR_23/: WOR.msg  WOR.rad  WOR.req  WOR.rpmx
Analysis/recurdyn/WOR_24/: WOR.msg  WOR.ran  WOR.rpmx
Analysis/recurdyn/WOR_25/: WOR.msg  WOR.rad  WOR.ran  WOR.req  WOR.rpmx
Analysis/recurdyn/WOR_26/: WOR.msg  WOR.rmd  WOR.rpmx
Analysis/recurdyn/WOR_27/: WOR.msg  WOR.rad  WOR.rpmx  WOR_REPORTSTEP.icf
PMI_Client/: CMakeLists.txt  README.md
PMI_Client/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcp_client.cpp  tcp_client.h
PMI_Server/: CMakeLists.txt
PMI_Server/amt21_rs485/: CMakeLists.txt
PMI_Server/amt21_rs485/apps/: amt21_cli.cpp
PMI_Server/amt21_rs485/include/amt21/: amt21_driver.hpp  model.hpp  protocol.hpp  rs485_port.hpp
PMI_Server/amt21_rs485/src/: amt21_driver.cpp  protocol.cpp  rs485_port.cpp
PMI_Server/robot_arm/: CMakeLists.txt
PMI_Server/robot_arm/apps/: demo.cpp
PMI_Server/robot_arm/include/robot_arm/: kinematics.hpp
PMI_Server/robot_arm/src/: kinematics.cpp
PMI_Server/src/: dxl_protocol2.cpp  dxl_protocol2.h  main.cpp  tcp_server.cpp  tcp_server.h
analysis/cpp/: CMakeLists.txt
analysis/cpp/include/: controlmain.h  types.h  utils.h
analysis/cpp/include/pmi/: types.hpp
analysis/cpp/src/: controlmain.cpp  main.cpp
analysis/matlab/: EQM.m  Y2qdq.m  acceleration_calculation.m  analysis.m  data_save.m  define_Y_vector.m  dqddq2Yp.m  euler_zxz.m  ik_main.m  main.m  mass_force_calculation.m  mat_data.csv  mat_data_torque.csv  path_generation.m  plotting.m  position_calculation.m  read_data.m  skew.m  velocity_calculation.m  waypoint_time_path.m  wp_trapezoid_path.m
analysis/matlab2/: euler_zxz.m  main.m  mat2rpy.m
analysis/python/: compare_recurdyn.py  main.py  path_generation.py  read_data.py  utils.py
analysis/recurdyn/: TraceCurve_body4.Cij.csv  rec_data.csv  rec_data_free_fall.csv  rec_data_initial_condition.csv  rec_data_motion.csv  rec_data_path.csv  rec_data_torque.csv
pmi_protocol/: pmi_protocol.cpp  pmi_protocol.h
